--- a/_config.yml
+++ b/_config.yml
@@ -21,18 +21,18 @@ repository               : "selimmd/selimd.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
-  name             : "Your Sidebar Name"
-  pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "Red Brick University"
-  uri              : # URL
-  email            : "none@example.org" 
+  avatar           : "profile.jpg"
+  name             : "Mohammad Selim"
+  pronouns         : he/his# example: "she/her"  
+  bio              : "Applied AI/ML reseracher"
+  location         : "Washingto, DC metro area"
+  employer         : "US Food and Drug Administartion"
+  uri              : "selimmd.github.io" # URL
+  email            : "selim.iitdu@gmail.com" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
+  googlescholar    : https://scholar.google.com/citations?user=lx7UxJcAAAAJ&hl=en"
   impactstory      : # URL
   orcid            : "http://orcid.org/yourorcidurl"
   pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
