--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ author:
   # Biographic information
   avatar           : "profile.jpg"
   name             : "Mohammad Selim"
-  pronouns         : he/his # example: "she/her"  
+  pronouns         : he/his
   bio              : "Applied AI/ML reseracher"
   location         : "Washingto, DC metro area"
   employer         : "US Food and Drug Administartion"
