--- a/_config.yml
+++ b/_config.yml
@@ -24,9 +24,9 @@ author:
   avatar           : "profile.jpg"
   name             : "Mohammad Selim"
   #pronouns         : he/his
-  bio              : "Applied AI/ML reseracher"
-  location         : "Washingto, DC metro area"
-  employer         : "US Food and Drug Administartion"
+  bio              : "Assistant Professor"
+  location         : "Lakeland, FL"
+  employer         : "Florida Polytechnic University"
   uri              : https://selimmd.github.io
   email            : "selim.iitdu@gmail.com" 
 
