--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ locale                   : "en-US"
 title                    : "Hi.... :wave:"
 title_separator          : "-"
 name                     : &name "Mohammad Selim, Ph.D."
-description              : &description "I am a Postdoc ORISE fellow at US Food and Drug Administation."
+description              : &description "I am an Assistant Professor at Florida Polytechnic University."
 url                      : https://selimmd.github.io
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "selimmd/selimd.github.io"
